[package]
name = "immo"
version = "0.1.1"
edition = "2021"
readme = "README.md"
description = "Processing of various images (e.g., drawing of square systems)"
authors = ["Lattexshz"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"

[dev-dependencies]
png = "0.17.7"